--- a/index.css
+++ b/index.css
@@ -141,51 +141,32 @@ input.small {
 
 .spell {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
 }
 
 .spell .name {
   text-decoration: underline;
-  max-width: 80%;
+  width: 80%;
   overflow-x: hidden;
   text-overflow: ellipsis;
   padding-left: 0.1em;
-  margin-right: 0.5in;
-  justify-content: space-evenly;
+  white-space: nowrap;
 }
 .level {
   color: cornflowerblue;
-  margin-right: 0.5in;
+  padding: 0 0.25em;
 }
 
-
-button[id="delete"] {
-    background-color: transparent;
-    border: 2px solid rgba(100, 50, 0, 0.8);
-    border-radius: 12px;
-    color: rgba(100, 50, 0, 0.8);
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-  }
-button[id='delete']:hover {
-    background-color: rgba(100, 50, 0, 0.8);
-    color: black;
-    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19)
+button.delete {
+  background-color: #ff3333;
+  color: white;
 }
-button[class="restart"] {
-    background-color: transparent;
-    color: rgba(100, 50, 0, 0.8);
-    border-radius: 12px;
-    border: 2px solid rgba(100, 50, 0, 0.8);
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-  }
-  button[class='restart']:hover {
-    background-color: rgba(100, 50, 0, 0.8);
-    color: black;
-    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19)
+
+button.fav {
+  background-color: #F8BE3D;
+  color: black;
+}
+
+.template {
+  display: none;
 }
